<resources>
    <string name="app_name">CareCloud Payments</string>

    <string name="registrations_start_text">This device is not registered. In order to register please log in to your CareCloud account.</string>
    <string name="registration_start_button">Start</string>
    <string name="registration_back_button">Back</string>
    <string name="registration_login_email_label">Email</string>
    <string name="registration_login_password_label">Password</string>
    <string name="registration_login_email_hint">Registered email</string>
    <string name="registration_login_password_hint">CareCloud password</string>
    <string name="registration_login_button">Log in</string>
    <string name="registration_login_title">Log in to register</string>
    <string name="registration_select_practice_title">Practices</string>
    <string name="registration_select_practice_text">Choose the default practice</string>
    <string name="registration_confirm_practice_text">This device has been configured for:</string>
    <string name="registration_confirm_correct">Is this correct?</string>
    <string name="registration_yes_button">Yes</string>
    <string name="registration_no_button">No</string>
    <string name="registration_next_button">Next</string>
    <string name="registration_select_location_text">Please select the location of the device:</string>
    <string name="registration_select_location_title">Locations</string>
    <string name="registration_device_title">Device name</string>
    <string name="registration_device_label">Name your device</string>
    <string name="registration_device_hint">Ex. Front Desk</string>
    <string name="registration_welcome_msg_label">Welcome Message</string>
    <string name="registration_welcome_msg_hint">Welcome to Dr. Smith\'s office</string>
    <string name="registration_image_text">Please select the image you want to display</string>
    <string name="registration_image_title">Profile image</string>
    <string name="registration_image_practice_logo">Your Logo</string>
    <string name="registration_image_practice_initials">Practice Initials</string>
    <string name="registration_image_carecloud_logo">CareCloud Logo</string>
    <string name="registration_image_edit_initials">Edit Initials</string>
    <string name="registration_review_edit_image">Edit Image</string>
    <string name="registration_review_edit">Edit</string>
    <string name="registration_review_title">Almost done</string>
    <string name="registration_review_subtitle">Please review the following information.</string>
    <string name="registration_review_register_device">Register</string>
    <string name="registration_review_device">Device</string>
    <string name="registration_review_location">Location</string>
    <string name="registration_review_practice">Practice</string>
    <string name="registration_practice_config_error">Oops&#8230; Looks like this device has been configured incorrectly. Please contact our support team.</string>
    <string name="registration_practice_config_call">1&#8211;866&#8211;931&#8211;3832</string>
    <string name="registration_practice_config_back">Back to Start</string>
    <string name="registration_progress_text">%1$d of %2$d</string>
    <string name="registration_complete_text">This device is ready to accept payments.</string>
    <string name="registration_complete_button">Let\'s go</string>
    <string name="settings_exit">Exit</string>
    <string name="settings_save">Save</string>
    <string name="settings_title">Settings</string>

    <string name="welcome_waiting">Waiting for payment</string>
    <string name="welcome_connecting">Connecting&#8230;</string>
    <string name="welcome_processing">Processing&#8230;</string>
    <string name="welcome_complete">Thank you for your payment.</string>
    <string name="welcome_complete_refund">Transaction Completed.</string>
    <string name="welcome_retrying">Retrying&#8230; Attempt #%d</string>
    <string name="welcome_connect_error">Unable to connect!</string>
    <string name="welcome_network_error">Unable to connect to local network!</string>
    <string name="welcome_internet_error">Unable to connect to the internet!</string>
    <string name="welcome_deepstream_error">Unable to connect to CareCloud!</string>


    <string name="content_logo">logo</string>
    <string name="content_icon_header">header icon</string>
    <string name="content_radio_button">radio button</string>
    <string name="content_error_icon">error icon</string>
    <string name="content_selected_icon">selected icon</string>
    <string name="content_edit_button">edit button</string>
    <string name="content_settings_button">settings button</string>

    <string name="error_email">Please provide a valid email address.</string>
    <string name="error_login">Sorry, an error occurred while logging in, please try again!</string>
    <string name="error_confirm_practice">Please confirm practice to continue.</string>
    <string name="error_select_practice">Please select a practice to continue.</string>
    <string name="error_select_location">Please select a location to continue.</string>
    <string name="error_device_in_use">Device is currently in use.</string>
    <string name="error_user_access_practice">This user does not have access to the current practice settings.</string>

    <string name="image_unavailable">Unavailable</string>

    <string name="key_practice_id">Practice ID</string>
    <string name="key_practice_name">Practice Name</string>
    <string name="key_location_id">Location ID</string>
    <string name="key_device_name">Device Name</string>
</resources>
