<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <include layout="@layout/toolbar_registration_progress"
             android:id="@+id/registration_toolbar"/>

    <LinearLayout
        android:layout_width="@dimen/content_width_login"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginBottom="@dimen/dp_40">

        <ImageView
            style="@style/HeaderIcon"
            android:src="@drawable/login_key"
            android:contentDescription="@string/content_icon_header"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.carecloud.carepay.mini.views.CarePayTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/InputLabel"
                android:text="@string/registration_login_email_label"
                app:customFont="proximanova_regular.otf"/>

            <com.carecloud.carepay.mini.views.CarePayEditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/InputField"
                android:hint="@string/registration_login_email_hint"
                app:customFont="gotham_rounded_light.otf"/>

            <com.carecloud.carepay.mini.views.CarePayTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_30"
                style="@style/InputLabel"
                android:text="@string/registration_login_password_label"
                app:customFont="proximanova_regular.otf"/>

            <com.carecloud.carepay.mini.views.CarePayEditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/InputField"
                android:inputType="textPassword"
                android:hint="@string/registration_login_password_hint"
                app:customFont="gotham_rounded_light.otf"/>

        </LinearLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.carecloud.carepay.mini.views.CarePayButton
                android:id="@+id/button_login"
                android:layout_height="wrap_content"
                style="@style/ButtonRounded"
                android:text="@string/registration_login_button"
                app:customFont="gotham_rounded_medium.otf"/>

            <include layout="@layout/progress_loader"/>

        </FrameLayout>
    </LinearLayout>
</LinearLayout>