<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <include layout="@layout/toolbar_registration_titleonly"
                     android:id="@+id/registration_toolbar"/>

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/button_exit"
                android:layout_width="@dimen/dp_48"
                android:layout_height="@dimen/dp_48"
                android:scaleType="centerInside"
                android:src="@drawable/close_blue"
                android:padding="@dimen/dp_10"
                android:layout_gravity="top|start"/>

            <com.electapps.fontviews.FontButton
                android:id="@+id/button_signout"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_10"
                style="@style/ButtonRoundedOutlineSmall"
                android:text="@string/settings_exit"
                android:layout_gravity="center_vertical|end"
                app:customFont="gotham_rounded_medium.otf"/>

        </FrameLayout>


    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_48"
        android:layout_marginEnd="@dimen/dp_48"
        android:layout_marginTop="@dimen/dp_15"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            style="@style/HeaderIcon"
            android:contentDescription="@string/content_icon_header"
            android:src="@drawable/login_key"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.carecloud.carepay.mini.views.CarePayTextView
                style="@style/InputLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registration_login_email_label"
                app:customFont="proximanova_regular.otf"/>

            <com.carecloud.carepay.mini.views.CarePayEditText
                android:id="@+id/input_email"
                style="@style/InputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registration_login_email_hint"
                android:inputType="textEmailAddress"
                app:customFont="gotham_rounded_light.otf"/>

            <com.carecloud.carepay.mini.views.CarePayTextView
                style="@style/InputLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_30"
                android:text="@string/registration_login_password_label"
                app:customFont="proximanova_regular.otf"/>

            <com.carecloud.carepay.mini.views.CarePayEditText
                android:id="@+id/input_password"
                style="@style/InputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registration_login_password_hint"
                android:inputType="textPassword"
                app:customFont="gotham_rounded_light.otf"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/content_width_buttons"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="gone">

                <com.carecloud.carepay.mini.views.CarePayButton
                    android:id="@+id/button_back"
                    style="@style/ButtonRoundedOutline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/registration_back_button"
                    app:customFont="gotham_rounded_medium.otf"/>

            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <View
                    android:id="@+id/button_spacer"
                    android:layout_width="@dimen/dp_10"
                    android:layout_height="0dp"/>

                <com.carecloud.carepay.mini.views.CarePayButton
                    android:id="@+id/button_login"
                    style="@style/ButtonRounded"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/registration_login_button"
                    app:customFont="gotham_rounded_medium.otf"/>

                <include layout="@layout/progress_loader"/>

            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>