<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="@dimen/content_width_image"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_40"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/carecloud_logo"
            style="@style/HeaderIcon"
            android:src="@drawable/practice_group"
            android:layout_marginBottom="@dimen/dp_40"
            android:contentDescription="@string/content_error_icon"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/colorPrimary"/>

        <com.carecloud.carepay.mini.views.CarePayTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_40"
            android:layout_marginBottom="@dimen/dp_40"
            android:gravity="center"
            android:textColor="@color/blueText"
            android:textSize="@dimen/instructons_text"
            android:text="@string/registration_practice_config_error"
            app:customFont="proximanova_semibold.otf"/>

        <com.carecloud.carepay.mini.views.CarePayTextView
            android:id="@+id/practice_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/dp_20"
            android:paddingEnd="@dimen/dp_20"
            android:gravity="center"
            android:textColor="@color/whiteText"
            android:textSize="@dimen/confirm_error_phone"
            android:text="@string/registration_practice_config_call"
            app:customFont="gotham_rounded_bold.otf"/>

        <com.carecloud.carepay.mini.views.CarePayButton
            android:id="@+id/button_back"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_60"
            style="@style/ButtonRoundedOutline"
            android:text="@string/registration_practice_config_back"
            app:customFont="gotham_rounded_medium.otf"/>

    </LinearLayout>


</FrameLayout>