<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_48"
        android:layout_marginEnd="@dimen/dp_48"
        android:layout_marginTop="@dimen/dp_15"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/carecloud_logo"
            style="@style/HeaderIcon"
            android:src="@drawable/white_check"
            android:layout_marginBottom="@dimen/dp_40"
            android:contentDescription="@string/content_icon_header"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/colorPrimary"/>

        <com.carecloud.carepay.mini.views.CarePayTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_40"
            android:layout_marginBottom="@dimen/dp_40"
            android:gravity="center"
            android:textColor="@color/blueText"
            android:textSize="@dimen/instructions_text"
            android:text="@string/registration_complete_text"
            app:customFont="proximanova_semibold.otf"/>


        <com.carecloud.carepay.mini.views.CarePayButton
            android:id="@+id/button_go"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_40"
            style="@style/ButtonRounded"
            android:text="@string/registration_complete_button"
            app:customFont="gotham_rounded_medium.otf"/>

    </LinearLayout>

</FrameLayout>