<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <include layout="@layout/toolbar_registration_progress"
             android:id="@+id/registration_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_48"
        android:layout_marginEnd="@dimen/dp_48"
        android:layout_marginTop="@dimen/dp_15"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            style="@style/HeaderIcon"
            android:contentDescription="@string/content_icon_header"
            android:src="@drawable/practice_group"/>

        <com.carecloud.carepay.mini.views.CarePayTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingEnd="@dimen/dp_20"
            android:paddingStart="@dimen/dp_20"
            android:text="@string/registration_confirm_practice_text"
            android:textColor="@color/blueText"
            android:textSize="@dimen/instructions_text"
            app:customFont="proximanova_regular.otf"/>

        <com.carecloud.carepay.mini.views.CarePayTextView
            android:id="@+id/practice_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:gravity="center"
            android:paddingEnd="@dimen/dp_20"
            android:paddingStart="@dimen/dp_20"
            android:textColor="@color/whiteText"
            android:textSize="@dimen/confirm_practice_text"
            app:customFont="gotham_rounded_bold.otf"
            tools:text="Practice Name"/>

        <com.carecloud.carepay.mini.views.CarePayTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_30"
            android:gravity="center"
            android:paddingEnd="@dimen/dp_20"
            android:paddingStart="@dimen/dp_20"
            android:text="@string/registration_confirm_correct"
            android:textColor="@color/blueText"
            android:textSize="@dimen/instructions_text"
            app:customFont="proximanova_regular.otf"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_10"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/button_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_10"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/indicator_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/content_radio_button"
                    android:src="@drawable/radio_selector"/>

                <com.carecloud.carepay.mini.views.CarePayTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_5"
                    android:lines="1"
                    android:maxLines="1"
                    android:text="@string/registration_yes_button"
                    android:textColor="@color/listItemText"
                    android:textSize="@dimen/list_item_text"
                    app:customFont="gotham_rounded_book.otf"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/button_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_5"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/indicator_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/content_radio_button"
                    android:src="@drawable/radio_selector"/>

                <com.carecloud.carepay.mini.views.CarePayTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_5"
                    android:lines="1"
                    android:maxLines="1"
                    android:text="@string/registration_no_button"
                    android:textColor="@color/listItemText"
                    android:textSize="@dimen/list_item_text"
                    app:customFont="gotham_rounded_book.otf"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/content_width_buttons"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/dp_5">

                <com.carecloud.carepay.mini.views.CarePayButton
                    android:id="@+id/button_back"
                    style="@style/ButtonRoundedOutline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/registration_back_button"
                    app:customFont="gotham_rounded_medium.otf"/>

            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_5"
                android:layout_weight="1">

                <com.carecloud.carepay.mini.views.CarePayButton
                    android:id="@+id/button_next"
                    style="@style/ButtonRounded"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/registration_next_button"
                    app:customFont="gotham_rounded_medium.otf"/>

                <include layout="@layout/progress_loader"/>

            </FrameLayout>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>