<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="@dimen/content_width_start"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/carecloud_logo"
            android:layout_height="wrap_content"
            style="@style/LogoLarge"
            android:layout_marginBottom="@dimen/dp_60"
            android:contentDescription="@string/content_logo"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/white"/>

        <com.carecloud.carepay.mini.views.CarePayTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_60"
            android:paddingStart="@dimen/dp_40"
            android:paddingEnd="@dimen/dp_40"
            android:gravity="center"
            android:textColor="@color/blueText"
            android:textSize="@dimen/instructons_text"
            android:text="@string/registrations_start_text"
            app:customFont="proximanova_semibold.otf"/>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_60">

            <com.carecloud.carepay.mini.views.CarePayButton
                android:id="@+id/button_start"
                android:layout_height="wrap_content"
                style="@style/ButtonRounded"
                android:text="@string/registration_start_button"
                app:customFont="gotham_rounded_medium.otf"/>

            <include layout="@layout/progress_loader"/>

        </FrameLayout>

    </LinearLayout>

</FrameLayout>