<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <include layout="@layout/toolbar_registration_progress"
             android:id="@+id/registration_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_48"
        android:layout_marginEnd="@dimen/dp_48"
        android:layout_marginTop="@dimen/dp_15"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            style="@style/HeaderIcon"
            android:src="@drawable/location_pin"
            android:contentDescription="@string/content_icon_header"/>

        <com.carecloud.carepay.mini.views.CarePayTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/blueText"
            android:textSize="@dimen/instructions_text"
            android:text="@string/registration_select_location_text"
            app:customFont="proximanova_regular.otf"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/locations_recycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/dp_10"/>

        <LinearLayout
            android:layout_width="@dimen/content_width_buttons"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dp_20">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/dp_5">

                <com.carecloud.carepay.mini.views.CarePayButton
                    android:id="@+id/button_back"
                    style="@style/ButtonRoundedOutline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/registration_back_button"
                    app:customFont="gotham_rounded_medium.otf"/>

            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/dp_5">

                <com.carecloud.carepay.mini.views.CarePayButton
                    android:id="@+id/button_next"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    style="@style/ButtonRounded"
                    android:text="@string/registration_next_button"
                    app:customFont="gotham_rounded_medium.otf"/>

                <include layout="@layout/progress_loader"/>

            </FrameLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>